--- a/assets/sass/components/_codeblock.scss
+++ b/assets/sass/components/_codeblock.scss
@@ -24,10 +24,12 @@
     font-size: calc(var(--base-font-size) * 0.9);
 }
 
+/*
 code {
     display: block;
     width: 100%;
 }
+    */
 
 .copy-button {
     top: 0rem;
