--- a/assets/sass/layouts/_page.scss
+++ b/assets/sass/layouts/_page.scss
@@ -1,12 +1,12 @@
 @use "./abstracts" as *;
 
 .content-container {
-    padding: 0 20px;
+    padding: 0 10px 0 20px;
     margin: auto;
     max-width: 1200px;
 
     @media only screen and (max-width: $breakpoint-sm) {
-        padding: 0 10px;
+        padding: 0 0px 0 10px;
     }
 }
 
@@ -14,11 +14,9 @@
     list-style: none;    
 }
 
-/*
 #TableOfContents ul > li > ul {
-    margin-left: 15px;
+    margin-left: 10px;   
 }
-*/
 
 .article {
     display: grid;
@@ -67,7 +65,7 @@
 .dropdown {
     position: relative;
     display: inline-block;
-    width: 150px;
+    width: 200px;
     height: 100%;
     border-left: 1px solid rgba(220, 220, 220, 0.22);
     padding-left: 20px;
