--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -49,7 +49,7 @@ Renders a menu for the given menu ID.
         {{- end -}}
       >{{ $name }}</a>
       {{- if $isdropdown -}}
-        <button class="btn-dropdown-icon" onclick="unfold(this)"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg></button>
+        <button class="btn-dropdown-icon" onclick="unfold(this)"><svg class="dd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg></button>
       </div>
       {{- end -}}
       {{- with .Children }}
