--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,14 +3,12 @@
 
 @use "base/base";
 
+@use "./layouts";
+
 @use "themes/dark";
 @use "themes/light";
 
 @use "components/codeblock";
-
-@use "layouts/topbar";
-@use "layouts/sidebar";
-@use "layouts/page";
 
 :root {
     //Default colors in case browser does not support data-theme
@@ -40,51 +38,4 @@ main {
 //Layout
 .container {
     width: 100%;
-}
-
-.text-copyright {
-    text-align: center;
-}
-
-.footer-links {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-
-    @media only screen and (max-width: $breakpoint-sm) {
-        grid-template-columns: 1fr;
-    }   
-}
-
-.footer-copyright {
-    padding-top: 20px;
-}
-
-footer {
-    background-color: var(--footer-color);
-    margin-top: 50px;
-    padding-top: 20px;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-bottom: 30px;
-}
-
-footer h1 {
-    font-size: 1rem;
-    font-weight: 800;
-}
-
-.footer-links ul {
-    list-style: none;
-}
-
-.footer-links ul > li {
-    margin-bottom: 10px;
-}
-
-.footer-links ul > li a {
-    color: var(--footer-link-color);
-
-    &:hover {
-        filter: brightness(200%);
-    }
 }
