--- a/assets/sass/components/_codeblock.scss
+++ b/assets/sass/components/_codeblock.scss
@@ -19,9 +19,14 @@
     overflow: auto;
 }
 
-.code-block pre code {
-    font-family: $font-family-mono;
-    font-size: calc(var(--base-font-size) * 0.9);
+.code-block pre {
+
+    position: relative;
+
+    & code {
+        font-family: $font-family-mono;
+        font-size: calc(var(--base-font-size) * 0.9);
+    }
 }
 
 /*
@@ -31,17 +36,28 @@ code {
 }
     */
 
-.copy-button {
+.code-copy-button {
+    position: absolute;
     top: 0rem;
-    right: 0.5rem;
+    right: 0rem;
+    z-index: 1;
     margin: 0;
     min-height: 28px;
-    padding: 4px 8px;
+    padding: 8px;
     background-color: #fff;
     color: rgb(60, 66, 87);
     border: 1px solid rgb(60, 66, 87);
     border-radius: 4px;
-    font-weight: 600;
+    font-weight: 600;    
+
+    & svg {
+        fill: black;
+        vertical-align: middle;
+    }
+    
+    &:hover svg {
+        fill: black;
+    }
 }
 
 //Chroma syntax highlighter classes
