--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,10 +1,10 @@
 <nav aria-label="top-navigation" class="topnav">
-    <div class="sidebar-toggler">
-        <a href="#" id="menuToggler"><svg xmlns="http://www.w3.org/2000/svg" height="36px" viewBox="0 -960 960 960" width="36px" fill="#e3e3e3"><path d="M160-269.23v-40h640v40H160ZM160-460v-40h640v40H160Zm0-190.77v-40h640v40H160Z"/></svg></a>
+    <div id="menuToggler">
+        <a href="#" ><svg xmlns="http://www.w3.org/2000/svg" height="36px" viewBox="0 -960 960 960" width="36px" fill="#e3e3e3"><path d="M160-269.23v-40h640v40H160ZM160-460v-40h640v40H160Zm0-190.77v-40h640v40H160Z"/></svg></a>
     </div>
     <div class="site-title-bar">
         {{ with resources.GetMatch "images/logo*" }}
-        <img src="{{ .RelPermalink }}" class="site-icon">
+        <a href='{{ site.BaseURL }}'><img src="{{ .RelPermalink }}" class="site-icon"></a>
         {{ end }}
         <span class="site-title"><a href='{{ site.BaseURL }}'>{{ site.Title }}</a></span>
     </div>
