--- a/assets/sass/layouts/_page.scss
+++ b/assets/sass/layouts/_page.scss
@@ -40,8 +40,25 @@
     margin-right: 15px;
 }
 
-.btn-toc-dropdown {
-    background-color: var(--background-color-secondary);
+/* The container <div> - needed to position the dropdown content */
+.toc-container {
+    grid-area: toc;
+    position: relative;
+    display: inline-block;
+    width: 200px;
+    height: 100%;
+    border-left: 1px solid rgba(220, 220, 220, 0.22);
+    padding-left: 20px;
+
+    @media only screen and (max-width: $breakpoint-lg) {
+        width: 100%;
+        border: none;
+        padding-left: 0;
+    }
+}
+
+.toc-btn-dropdown {
+    background-color: var(--toc-background-color);
     color: var(--text-color);
     padding: 16px 17px 10px 17px;
     font-size: 16px;
@@ -61,40 +78,34 @@
 
 }
 
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: inline-block;
-    width: 200px;
-    height: 100%;
-    border-left: 1px solid rgba(220, 220, 220, 0.22);
-    padding-left: 20px;
-
-    @media only screen and (max-width: $breakpoint-lg) {
-        width: 100%;
-        border: none;
-        padding-left: 0;
-    }
-}
-
 /* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: display;
+.toc-content {
+    display: block;
     position: relative;
-    z-index: 1;
     width: 100%;
 
     @media only screen and (max-width: $breakpoint-lg) {
         transition: all 0.3s ease;
         max-height: 0;
         overflow: hidden;
-        background-color: var(--background-color-secondary);
+        background-color: var(--toc-background-color);
         box-shadow: 0px 3px 4px 0px rgba(0,0,0,0.2);
     }
 }
 
+/* Show the dropdown menu (use JS to add this class to the .toc-content container when the user clicks on the dropdown button) */
+.unfold-toc {
+    transition: all 0.25s ease-out;
+    border-top: none;
+
+    @media only screen and (max-width: $breakpoint-lg) {
+        border-top: 1px solid var(--text-color);
+        max-height: 1000px;
+    }
+}
+
 /* Links inside the dropdown */
-.dropdown-content a {
+.toc-content a {
     color: var(--text-color);
     padding: 5px 0px;
     text-decoration: none;
@@ -106,7 +117,7 @@
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {
+.toc-content a:hover {
     color: var(--link-color);
 
     @media only screen and (max-width: $breakpoint-lg) {        
@@ -114,12 +125,3 @@
     }
 }
 
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.unfold {
-    border-top: none;
-
-    @media only screen and (max-width: $breakpoint-lg) {
-        border-top: 1px solid var(--text-color);
-        max-height: 1000px;
-    }
-}
