--- a/assets/sass/themes/_dark.scss
+++ b/assets/sass/themes/_dark.scss
@@ -4,6 +4,7 @@
     --text-color: #F7F8F8;
     --link-color: #828fff;
     --topbar-background-color: #2c2c2c;
+    --toc-background-color: #2c2c2c;
     --footer-color: #2c2c2c;
     --footer-link-color: #e5e5e5;
     --sidebar-background-color: rgba(255, 255, 255, 0.05);
