--- a/assets/sass/themes/_light.scss
+++ b/assets/sass/themes/_light.scss
@@ -4,6 +4,7 @@
     --text-color: #121416;
     --link-color: #543fd7;
     --topbar-background-color: #f3f3f3;
+    --toc-background-color: #e9e9e9;
     --footer-color: #2c2c2c;
     --footer-link-color: #F7F8F8;
     --sidebar-background-color: rgba(0, 0, 0, 0.05);
