--- a/assets/sass/layouts/index.scss
+++ b/assets/sass/layouts/index.scss
@@ -1,4 +1,4 @@
-@forward "./layouts/page";
+@forward "./layouts/header";
 @forward "./layouts/sidebar";
-@forward "./layouts/topbar";
+@forward "./layouts/article";
 @forward "./layouts/footer";
