--- a/assets/sass/components/_codeblocks.scss
+++ b/assets/sass/components/_codeblocks.scss
@@ -1,11 +1,16 @@
-@use "./abstracts" as *;
+@use "./utils" as *;
 
 // Code blocks
-.code-block-container {
+.codeblock-container {
     background-color: var(--chroma-bg);
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    margin: 1rem 0;
+    border-radius: 10px;
 }
 
-.code-block-title {
+.codeblock-title {
     background-color: #0a7eaf;
     padding: 10px 10px;
     font-family: $font-family-mono;
@@ -14,53 +19,52 @@
     color: white;
 }
 
-.code-block {
-    padding: 20px 10px;
-    overflow: auto;
-}
-
-.code-block pre {
-
+.codeblock-code {
+    padding: 20px;
+    white-space: pre;
+    -webkit-overflow-scrolling: touch;
+    overflow-x: auto;
+    max-width: 100%;
+    min-width: 100px;
     position: relative;
 
-    & code {
+    > code {
         font-family: $font-family-mono;
-        font-size: calc(var(--base-font-size) * 0.9);
+        font-size: 0.8rem;
+    }
+
+    &:hover {
+
+        > .code-copy-button {
+            display: inline-block;
+            opacity: 1;
+            transition: opacity 1s ease;
+        }
+
     }
 }
 
-/*
-code {
-    display: block;
-    width: 100%;
-}
-    */
-
 .code-copy-button {
     position: absolute;
-    top: 0rem;
-    right: 0rem;
+    top: 10px;
+    right: 10px;
     z-index: 1;
     margin: 0;
     min-height: 28px;
     padding: 8px;
-    background-color: #fff;
-    color: rgb(60, 66, 87);
-    border: 1px solid rgb(60, 66, 87);
+    background-color: var(--chroma-bg);
+    color: var(--text-color);
+    border: 1px solid var(--text-color);
     border-radius: 4px;
-    font-weight: 600;    
+    font-weight: 600;
+    opacity: 0;
+    cursor: pointer;
 
     & svg {
-        fill: black;
+        fill: var(--text-color);
         vertical-align: middle;
     }
-    
-    &:hover svg {
-        fill: black;
-    }
 }
-
-//Chroma syntax highlighter classes
 
 /* Background */ .bg { color:var(--chroma-color);background-color:var(--chroma-bg); }
 /* PreWrapper */ .chroma { color:var(--chroma-color);background-color:var(--chroma-bg); }
