--- a/assets/sass/themes/_dark.scss
+++ b/assets/sass/themes/_dark.scss
@@ -1,13 +1,21 @@
 :root[data-theme='dark'] {
-    //Base colors
-    --background-color: #1b1b1b;
+    --header-background-color: #2c2c2c;
+    --header-text-color: #F7F8F8;
+    --background-color: #1b1b1d;
     --text-color: #F7F8F8;
-    --link-color: #828fff;
-    --topbar-background-color: #2c2c2c;
-    --toc-background-color: #2c2c2c;
-    --footer-color: #2c2c2c;
+    --link-color: #7783f6;
+    --link-active-color: #c4c9f8;
+
+    //Borders and other UI elements
+    --secondary-color:#565656;
+
+    //Base colors
+    --footer-background-color: #2c2c2c;
     --footer-link-color: #e5e5e5;
-    --sidebar-background-color: rgba(255, 255, 255, 0.05);
+    
+    --toc-background-color: #2c2c2c;
+
+    --sidebar-background-color: #2c2c2c;
     --sidebar-active-background-color: rgba(255, 255, 255, 0.07);
     --sidebar-icon-background-color: rgba(255, 255, 255, 0.1);
    
