--- a/assets/sass/themes/_light.scss
+++ b/assets/sass/themes/_light.scss
@@ -1,28 +1,39 @@
 :root[data-theme='light'] {
-    //Base colors
-    --background-color: #f3f3f3;
-    --text-color: #121416;
-    --link-color: #543fd7;
-    --topbar-background-color: #f3f3f3;
-    --toc-background-color: #e9e9e9;
-    --footer-color: #2c2c2c;
-    --footer-link-color: #F7F8F8;
-    --sidebar-background-color: rgba(0, 0, 0, 0.05);
-    --sidebar-active-background-color: rgba(0, 0, 0, 0.07);
-    --sidebar-icon-background-color: rgba(0, 0, 0, 0.1);
-   
-    //Syntax highlighting
-    /* Generated using: hugo gen chromastyles --style=catppuccin-latte */
-    --chroma-bg: #eff1f5;
-    --chroma-color: #4c4f69;
-    --chroma-highlight: #bcc0cc;
-    --chroma-linenos: #8c8fa1;
-    --chroma-keyword: #8839ef;
-    --chroma-variable: #dc8a78;
-    --chroma-function: #1e66f5;
-    --chroma-string: #40a02b;    
-    --chroma-numbers: #fe640b;
-    --chroma-comment: #9ca0b0;
-    --chroma-deleted: #d20f39;
-    --chroma-generic: #44475a;
+        --header-background-color: #f3f3f3;
+        --header-text-color: #121416;
+        --background-color: #f3f3f3;
+        --text-color: #121416;
+        --link-color: #3345e7;
+        --link-active-color: #828fff;
+
+        //Borders and other UI elements
+        --secondary-color: #dfdfdf;
+
+        --footer-background-color: #2c2c2c;
+        --footer-text-color: #F7F8F8;
+        --footer-link-color: #a8a8a8;
+        --copyright-text-color: #c1c1c1;
+
+
+        //Base colors
+        --toc-background-color: #e9e9e9;
+
+        --sidebar-background-color: #f1f1f1;
+        --sidebar-active-background-color: rgba(0, 0, 0, 0.07);
+        --sidebar-icon-background-color: rgba(0, 0, 0, 0.1);
+
+        //Syntax highlighting
+        /* Generated using: hugo gen chromastyles --style=catppuccin-latte */
+        --chroma-bg: #eff1f5;
+        --chroma-color: #4c4f69;
+        --chroma-highlight: #bcc0cc;
+        --chroma-linenos: #8c8fa1;
+        --chroma-keyword: #8839ef;
+        --chroma-variable: #dc8a78;
+        --chroma-function: #1e66f5;
+        --chroma-string: #40a02b;
+        --chroma-numbers: #fe640b;
+        --chroma-comment: #9ca0b0;
+        --chroma-deleted: #d20f39;
+        --chroma-generic: #44475a;
 }
