--- a/layouts/_partials/menu.html
+++ b/layouts/_partials/menu.html
@@ -22,7 +22,7 @@ Renders a menu for the given menu ID.
   {{- $page := .page }}
   {{- range .menuEntries }}
     {{- $attrs := dict "href" .URL }}
-    {{- if $page.IsMenuCurrent .Menu .}}
+    {{- if or ($page.IsMenuCurrent .Menu .) (eq $page.RelPermalink .URL)}}
       {{- $attrs = merge $attrs (dict "class" "active" "aria-current" "page") }}
     {{- else if $page.HasMenuCurrent .Menu .}}
       {{- $attrs = merge $attrs (dict "class" "ancestor" "aria-current" "true") }}
