--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,3 +1,5 @@
+@use "./utils" as *;
+
 body {
     font-family: "Inter";
     line-height: 1.5;
@@ -28,4 +30,9 @@ a {
 .text-last-updated {
     font-style: italic;
     font-size: 0.8rem;
+    margin-top: 30px;
+}
+
+code {
+    font-family: $font-family-mono;
 }
