--- a/layouts/_partials/menu.html
+++ b/layouts/_partials/menu.html
@@ -28,7 +28,8 @@ Renders a menu for the given menu ID.
       {{- $attrs = merge $attrs (dict "class" "ancestor" "aria-current" "true") }}
     {{- end }}
     {{/* Check if page is a section page or if menu item has children items */}}
-    {{- $hasDependents := or .HasChildren (eq .Page.Kind "section") }}
+    {{/* Additionally, check if menu item points to an existing page and if it's a section page, make sure it has more than 1 child */}}
+    {{- $hasDependents := and (not (eq .URL "")) (or .HasChildren (and (eq .Page.Kind "section") (gt .Page.RegularPages.Len 1) )) }}
     {{- $name := .Name }}
     {{- with .Identifier }}
       {{- with T . }}
