--- a/assets/sass/pages/_single.scss
+++ b/assets/sass/pages/_single.scss
@@ -2,6 +2,7 @@
 
     margin-left: 10px;
     margin-right: 10px;
+    padding-top: 30px;
 
     > ul, ol {
         margin-left: 25px;
@@ -10,10 +11,6 @@
             padding-left: 10px;
             margin-bottom: 5px;
         }
-    }
-
-    > ol li {
-        margin-bottom: 20px;
     }
 
     h2 {
