Added option to hide TOC

--- a/assets/sass/layouts/_article.scss
+++ b/assets/sass/layouts/_article.scss
@@ -9,11 +9,13 @@ main {
     display: flex;
     justify-content: center;
     flex-grow: 1;
+    padding: 0 10px;
     //overflow-x: auto;
 
     @media only screen and (max-width: $breakpoint-md) {
         flex-direction: column-reverse;
         overflow-x: hidden;
+        padding: 0;
     }
 }
 
