--- a/assets/sass/components/index.scss
+++ b/assets/sass/components/index.scss
@@ -1,3 +1,4 @@
 @forward "./components/themeToggler";
 @forward "./components/codeblocks";
 @forward "./components/cards";
+@forward "./components/breadcrumbs";
