--- a/layouts/_partials/menu.html
+++ b/layouts/_partials/menu.html
@@ -27,6 +27,9 @@ Renders a menu for the given menu ID.
     {{- else if $page.HasMenuCurrent .Menu .}}
       {{- $attrs = merge $attrs (dict "class" "ancestor" "aria-current" "true") }}
     {{- end }}
+    {{ if strings.HasPrefix .URL  "http" }}
+      {{- $attrs = merge $attrs (dict "target" "_blank" "class" "link-ext") }}
+    {{- end }}
     {{/* Check if page is a section page or if menu item has children items */}}
     {{/* Additionally, check if menu item points to an existing page and if it's a section page, make sure it has more than 1 child */}}
     {{- $hasDependents := and (not (eq .URL "")) (or .HasChildren (and (eq .Page.Kind "section") (gt .Page.RegularPages.Len 0) )) }}
