--- a/assets/sass/layouts/_footer.scss
+++ b/assets/sass/layouts/_footer.scss
@@ -8,6 +8,10 @@ footer {
     display: grid;
     grid-template-rows: 1fr auto;
 
+    @media only screen and (max-width: $breakpoint-sm) {
+        padding: 30px 10px;
+    }
+
 }
 
 .footer-link-container {
@@ -21,21 +25,38 @@ footer {
 
 }
 
+.footer-link-heading {
+    font-weight: 600;
+    color: var(--footer-text-color);
+    margin-bottom: 15px;
+}
+
 .footer-links ul {
 
     list-style: none;
     margin-bottom: 20px;
 
     > li {
-        margin-bottom: 3px;
+        margin-bottom: 7px;
     }
     
     > li > a {
         color: var(--footer-link-color);
 
         &:hover {
-            color: var(--footer-text-color);
+            color: var(--link-active-color);
+
+            & svg {
+                fill: var(--link-active-color);
+            }
         }
+
+        & svg {
+            padding-left: 7px;
+            vertical-align: middle;
+            fill: var(--footer-link-color);
+        }
+        
     }
 
 }
