--- a/assets/sass/components/index.scss
+++ b/assets/sass/components/index.scss
@@ -2,3 +2,4 @@
 @forward "./components/codeblocks";
 @forward "./components/cards";
 @forward "./components/breadcrumbs";
+@forward "./components/hero";
