--- a/assets/sass/components/index.scss
+++ b/assets/sass/components/index.scss
@@ -3,3 +3,4 @@
 @forward "./components/cards";
 @forward "./components/breadcrumbs";
 @forward "./components/hero";
+@forward "./components/search";
