--- a/assets/sass/components/_themeToggler.scss
+++ b/assets/sass/components/_themeToggler.scss
@@ -6,7 +6,6 @@
     --switch-width: calc((var(--switch-height) * 2) - var(--switch-padding));
     --slider-height: calc(var(--switch-height) - var(--switch-padding));
     --slider-on: calc(var(--switch-height) - var(--switch-padding));
-    --slider-color: #2196F3;
 }
 
 //Dark/Light theme slider
@@ -62,11 +61,11 @@
 }
 
 input:checked+.slider {
-    background-color: var(--slider-color);
+    background-color: var(--primary-color);
 }
 
 input:focus+.slider {
-    box-shadow: 0 0 1px var(--slider-color);
+    box-shadow: 0 0 1px var(--primary-color);
 }
 
 input:checked+.slider:before {
