--- a/assets/sass/themes/_light.scss
+++ b/assets/sass/themes/_light.scss
@@ -1,8 +1,5 @@
 :root[data-theme='light'] {
 
-        
-
-
         --header-background-color: #f3f3f3;
         --header-text-color: #121416;
         --background-color: #f3f3f3;
@@ -10,6 +7,9 @@
         --link-color: #3345e7;
         --link-active-color: #828fff;
 
+        //Buttons
+        --primary-color: #6306f9;
+        --primary-color-lighter: #7c2cfe;
         //Borders and other UI elements
         --secondary-color: #dfdfdf;
 
