--- a/assets/sass/components/_search.scss
+++ b/assets/sass/components/_search.scss
@@ -28,7 +28,7 @@
             width: 150px;
             transition: width 0.5s ease;
             //border: 2px solid var(--link-color);
-            box-shadow: 0px 0px 5px var(--link-color);
+            box-shadow: 0px 0px 5px var(--primary-color);
             border: 0;
             outline: 0;
         }
