--- a/assets/sass/components/index.scss
+++ b/assets/sass/components/index.scss
@@ -4,3 +4,4 @@
 @forward "./components/breadcrumbs";
 @forward "./components/hero";
 @forward "./components/search";
+@forward "./components/buttons";
