--- a/layouts/_partials/breadcrumbs.html
+++ b/layouts/_partials/breadcrumbs.html
@@ -4,7 +4,7 @@
         <li>
           <a href="{{ .RelPermalink }}">
             {{- if .IsHome }}
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M240-200h133.85v-237.69h212.3V-200H720v-360L480-740.77 240-560v360Zm-60 60v-450l300-225.77L780-590v450H526.15v-237.69h-92.3V-140H180Zm300-330.38Z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px"><path d="M187.27-147.27v-440L480-807.69l292.73 220.65v439.77H558.27v-264.46H401.92v264.46H187.27Z"/></svg>
             {{- else }}
               {{ .LinkTitle }}
             {{ end -}}
